Fixed menu for small screen, overflow: clip

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@ body {
     margin: 0;
     min-height: 100vh;
     background: #F9F9F9;
-    overflow-x: hidden;
 }
 
 
@@ -38,6 +37,7 @@ header {
     padding: 24px 24px;
     position: sticky;
     width: 100%;
+    overflow-x: clip;
 }
 
 header div {
